Altered .video-container max-width to 960px from 640px. Re-deleted README.md to ensure visibility of index.html when loading the site.

--- a/html5up-massively/assets/css/main.css
+++ b/html5up-massively/assets/css/main.css
@@ -3232,7 +3232,7 @@ table.alt tbody tr td {
 
 /* Video Container*/
 .video-container {
-	max-width: 640px;
+	max-width: 960px;
 	margin: 0 auto;
 	/* Center the video horizontally */
 	position: relative;
